--- a/sanitizer.css
+++ b/sanitizer.css
@@ -1,3 +1,57 @@
+
+/* give every element a zero padding, border and margin and align them verticaly with the baseline with their maximum font-size*/
+@import url(//db.onlinewebfonts.com/c/70e50271445663d21886d54b38bf63d5?family=FF+Bauer+Grotesk);
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    font-family: "FF Bauer Grotesk", sans-serif;
+}
+/* remove default styling for ordered and unodered list */
+ol, 
+ul {
+    list-style: none;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    height: auto;
+}
+
+blockquote, 
+q {
+    quotes: none;
+}
+
+blockquote:before, 
+blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+
 [class*='col-'] {
     float: left;
     padding: 12px;
@@ -8,8 +62,8 @@
     box-sizing: border-box;
 }
 /* every column should be a child of grid */
-.grid.after,
-.fix-float {
+.grid::after,
+.fix-float::after {
     content: "";
     display: table;
     clear: both;
@@ -50,4 +104,38 @@
 }
 .col-12-12 {
     width: 100%;
+}
+
+.col-1-1 {
+    width: 100%
+}
+.col-1-2 {
+    width: 50%
+}
+.col-1-3 {
+    width: 33.33%
+}
+.col-1-4 {
+    width: 25%;
+}
+.col-1-5 {
+    width: 20%;
+}
+.col-1-6 {
+    width: 16.66%;
+}
+.col-1-7 {
+    width: 14.28%;
+}
+.col-1-8 {
+    width: 12.5%;
+}
+.col-1-9 {
+    width: 11.11%p;
+}
+.col-1-10 {
+    width: 10%;
+}
+.col-1-11 {
+    width: 9.09%;
 }
